# desearch

./: .env  .env.example  .gitignore  pyproject.toml  script.py  test_ai.py
2captcha/: __init__.py  recaptcha_v2_invisible.py  recaptcha_v3.py  turnstile.py
apify/: __init__.py  create_account.py
apify/lib/: __init__.py  apify_account_store.py  (+9 more)
db/: __init__.py  miner_request_log.py  pg.py  serper.py  setup_db.py
scripts/: analyze_ai_tasks.py  check_axon_is_alive.py  run_ai_task_validation.py  run_twitter_task_validation.py  run_web_task_validation.py  synthetic_task.py
serper/: api-keys.txt  test_serper_search.py
source/: .gitignore  README.md  example.py  requirements.txt  run.sh  setup.py
source/utility-api/: .env.example  Dockerfile  README.md  pyproject.toml
source/utility-api/app/: auth.py  config.py  logger.py  main.py  redis_client.py
source/utility-api/app/db/: session.py
source/utility-api/app/domains/dataset/: enums.py  question_cache.py  router.py  schemas.py
source/utility-api/app/domains/dataset/models/: question.py
source/utility-api/app/domains/logs/: enums.py  router.py  schemas.py
source/utility-api/app/domains/logs/models/: miner_response_log.py
source/utility-api/app/domains/miners/: client.py  router.py  schemas.py
source/utility-api/app/scripts/: create_tables.py  import_huggingface.py
source/utility-api/tests/: test_logs_router.py
tasks/: 0001_ai_search.json  0001_x_search.json  0002_ai_search.json  0002_x_search.json  0003_x_search.json  0004_web_search.json
twex/: __init__.py  create_account.py  proxies.txt
(+165 files in other folders)
