[project]
name = "subnet-22-utility-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Desearch"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[standard] (>=0.128.1,<0.129.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.1,<4.0.0)",
    "bittensor-wallet (>=4.0.1,<5.0.0)",
    "bittensor (>=10.1.0,<11.0.0)",
    "redis (>=5.0.0,<6.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "datasets (>=4.5.0,<5.0.0)"
]
